--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: "jdbc:mariadb://svc.gksl2.cloudtype.app:31617/ecommerce"
+#    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#    url: "jdbc:log4jdbc:mariadb://svc.gksl2.cloudtype.app:31617/ecommerce"
     username: ecommerce
     password: ecommerce
     hikari:
@@ -14,14 +16,17 @@ spring:
       maximum-pool-size: 50
       transaction-isolation: TRANSACTION_READ_UNCOMMITTED
   jpa:
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
-        show_sql: true
-        ddl-auto: create
         format_sql: true
+#        show_sql: true
 
 
 logging:
   level:
     org.hibernate.SQL: debug    # Logger
     org.hibernate.type: trace   # Show Query Parameter
+#    org.springframework.web: DEBUG
+#    com.zaxxer.hikari.HikariDataSource: ERROR
