#4 "AccountRepository"에 대해 테스트 케이스 작성함

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
       transaction-isolation: TRANSACTION_READ_UNCOMMITTED
   jpa:
     hibernate:
+      generate-ddl: true
       ddl-auto: update
     properties:
       hibernate:
