--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+**/build/
 
 ### STS ###
 .apt_generated
