--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 80
 
 spring:
+  web:
+    resources:
+      static-locations: classpath:/static, classpath:/build
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: "jdbc:mariadb://svc.gksl2.cloudtype.app:31617/ecommerce"
