--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 80
 
 spring:
+  profiles:
+    active: prod
   web:
     resources:
       static-locations: classpath:/static, classpath:/build
