--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
