--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,11 +13,12 @@ spring:
       static-locations: classpath:/static, classpath:/build
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: "jdbc:mariadb://svc.gksl2.cloudtype.app:31617/ecommerce"
+    url: "jdbc:mariadb://tht1234551.asuscomm.com:3306/ecommerce"
+#    url: "jdbc:mariadb://svc.gksl2.cloudtype.app:31617/ecommerce"
 #    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #    url: "jdbc:log4jdbc:mariadb://svc.gksl2.cloudtype.app:31617/ecommerce"
-    username: ecommerce
-    password: ecommerce
+    username: mariadb
+    password: mariadb
     hikari:
       auto-commit: false
       connection-test-query: SELECT 1
